Rebranding as Morevna Edition (#1 me)
Reviewed-on: https://tvoygit.ru/morevnaproject/synfig/pulls/1
Co-authored-by: Konstantin Dmitriev <ksee.zelgadis@gmail.com>
Co-committed-by: Konstantin Dmitriev <ksee.zelgadis@gmail.com>

--- a/ETL/README
+++ b/ETL/README
@@ -6,14 +6,14 @@ types and functions from the C++ Standard Template Library (STL).
 
 Links:
 
-Web:  	http://synfig.org/
-Wiki:	http://wiki.synfig.org
-Forums:	http://synfig.org/forums
-Proj: 	http://sourceforge.net/projects/synfig/
-Bugs:	https://github.com/synfig/synfig/issues
-IRC:  	irc://irc.freenode.net/synfig
+Web:         http://synfig.ru/
+Docs:        http://docs.synfig.ru/
+Forums:      https://community.morevna-school.ru/c/synfig/6
+Code:        https://tvoygit.ru/morevnaproject/synfig
+Bug Tracker: https://tvoygit.ru/morevnaproject/synfig/issues
+Telegram:    https://t.me/synfig
 
-Please use the IRC channel and the bug tracker to get support and
+Please use Forums and the bug tracker to get support and
 report bugs, request features and submit patches.
 
 Copyright
