--- a/synfig-core/po/ru.po
+++ b/synfig-core/po/ru.po
@@ -2916,9 +2916,11 @@ msgid ""
 "\n"
 msgstr ""
 "ВНИМАНИЕ!\n"
-"Вы пытаетесь открыть файл созданный в устаревшей версии Synfig.\n"
-"Файл сохраненный  в текущей версии программы\n"
-"может некорректно открываться в предыдущих версиях Synfig.\n"
+"Вы пытаетесь открыть файл, который был создан в\n"
+"устаревшей версии Synfig.\n"
+"Если сохранить файл в текущей версии программы,\n"
+"то он может некорректно открываться в предыдущих\n"
+"версиях.\n"
 "\n"
 
 #: ../src/synfig/loadcanvas.cpp:3323
