--- a/synfig-studio/README
+++ b/synfig-studio/README
@@ -1,4 +1,4 @@
-              synfigstudio -- vector animation studio
+              Synfig Studio (Morevna Edition)
 
 synfig is a vector based 2D animation package. It is designed to be
 capable of producing feature-film quality animation. It eliminates the
@@ -13,13 +13,12 @@ or .sifz format.
 
 Links
 
-Web:  	http://synfig.org/
-Wiki:	http://wiki.synfig.org
-Forums:	http://synfig.org/forums
-Proj: 	http://sourceforge.net/projects/synfig/
-Bugs:	https://github.com/synfig/synfig/issues
-IRC:  	irc://irc.freenode.net/synfig
-
+Web:         http://synfig.ru/
+Docs:        http://docs.synfig.ru/
+Forums:      https://community.morevna-school.ru/c/synfig/6
+Code:        https://tvoygit.ru/morevnaproject/synfig
+Bug Tracker: https://tvoygit.ru/morevnaproject/synfig/issues
+Telegram:    https://t.me/synfig
 
 Please use the IRC channel and the bug tracker to get support and
 report bugs, request features and submit patches.
@@ -52,6 +51,7 @@ Copyright 2015 Denis Zdorovtsov
 Copyright 2011 Ramon Miranda
 Copyright 2015 Evgenij Katunov
 Copyright 2015 Max May
+Copyright 2021-2023 ANO "Morevna Project" OATDC
 
 Some of the icons are placed in the Public Domain by Chris Norman
 Some of the icons are placed in the Public Domain by Carlos López González
